--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "^15.4",
     "react-dom": "^15.4",
-    "statik": "1.4.6"
+    "express": "4.17.1"
   },
   "devDependencies": {
     "auto-reload-brunch": "^2",
